# sc-tools

./: .gitignore  README.md  cabal.project  fix-fourmolu.sh  flake.nix
.agents/skills/transaction/: PATTERNS.md  TROUBLESHOOTING.md
.github/workflows/: ci-linux.yaml  gh-pages.yaml
nix/: outputs.nix  project.nix  shell.nix
skills/transaction/: README.md  SKILL.md  TRANSACTION.md
src/base/: convex-base.cabal
src/base/lib/Convex/: BuildTx.hs  Class.hs  Constants.hs  NodeParams.hs  NodeQueries.hs  PlutusTx.hs  Utils.hs  UtxoMod.hs  Utxos.hs
src/base/lib/Convex/Aiken/: Blueprint.hs  BlueprintKey.hs  Error.hs  Offchain.hs
src/base/lib/Convex/NodeQueries/: Debug.hs
src/base/lib/Convex/Utils/: BuiltinData.hs  String.hs  SubmissionFailure.hs
src/base/test/Convex/: SubmissionFailureSpec.hs
src/base/test/Convex/Aiken/: Test.hs
src/blockfrost/: convex-blockfrost.cabal
src/blockfrost/lib/Convex/: Blockfrost.hs
src/blockfrost/lib/Convex/Blockfrost/: MonadBlockchain.hs  Types.hs
src/coin-selection/: convex-coin-selection.cabal
src/coin-selection/lib/Cardano/Api/: Extras.hs
src/coin-selection/lib/Convex/: CoinSelection.hs  Query.hs  UTxOCompatibility.hs
src/coin-selection/lib/Convex/MockChain/: CoinSelection.hs  Staking.hs
src/coin-selection/test/: Scripts.hs  Spec.hs
src/coin-selection/test/Scripts/: MatchingIndex.hs
src/devnet/: convex-devnet.cabal
src/devnet/config/devnet/: cardano-node.json  genesis-conway.json  genesis-shelley.json
src/devnet/lib/Convex/Devnet/: CardanoNode.hs  Utils.hs  Wallet.hs  WalletServer.hs
src/devnet/lib/Convex/Devnet/CardanoNode/: Types.hs
src/devnet/test/: Spec.hs
src/devnet/test/Devnet/Test/: LatestEraTransitionSpec.hs
src/devnet/test/Devnet/Test/LatestEraTransitionSpec/: PV2.hs  PV3.hs
src/maestro/lib/Convex/Maestro/: MonadBlockchain.hs  Types.hs
src/mockchain/: convex-mockchain.cabal
src/mockchain/lib/Convex/: MockChain.hs
src/mockchain/lib/Convex/MockChain/: Defaults.hs
src/node-client/lib/Convex/NodeClient/: Fold.hs  Progress.hs
src/optics/: convex-optics.cabal
src/optics/lib/Convex/CardanoApi/: Lenses.hs
src/wallet/: convex-wallet.cabal
src/wallet/lib/Convex/: Wallet.hs
