cabal-version: 3.4
name:          convex-base
version:       0.3.0.0
synopsis:
  Base classes and types for working with cardano-api transactions

license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Jann Müller
homepage:      https://github.com/j-mueller/sc-tools
bug-reports:   https://github.com/j-mueller/sc-tools
description:
  Please see the README on GitHub at <https://github.com/j-mueller/sc-tools>

build-type:    Simple
data-files:    data/aiken-scripts.json

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  other-modules:      Paths_convex_base
  autogen-modules:    Paths_convex_base

library
  import:          lang
  exposed-modules:
    Convex.Aiken.Blueprint
    Convex.Aiken.BlueprintKey
    Convex.Aiken.Error
    Convex.Aiken.Offchain
    Convex.BuildTx
    Convex.Class
    Convex.Constants
    Convex.Eon
    Convex.MonadLog
    Convex.NodeParams
    Convex.NodeQueries
    Convex.NodeQueries.Debug
    Convex.PlutusLedger.V1
    Convex.PlutusLedger.V3
    Convex.PlutusTx
    Convex.ResolvedTx
    Convex.Utils
    Convex.Utils.BuiltinData
    Convex.Utils.String
    Convex.Utils.SubmissionFailure
    Convex.UtxoMod
    Convex.Utxos

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base                 >=4.14 && <4.20
    , cardano-ledger-core
    , containers
    , either-result
    , exceptions
    , katip
    , lens
    , mtl
    , prettyprinter
    , primitive
    , QuickCheck
    , text
    , time
    , transformers

  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-api                  ==10.21.0.0
    , cardano-binary
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-data
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , convex-optics
    , dlist
    , either-result
    , graphviz
    , ordered-containers
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , strict-sop-core

test-suite convex-base-test
  import:             lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-tool-depends: tasty-discover:tasty-discover
  other-modules:
    Convex.Aiken.Test
    Convex.PlutusLedgerSpec
    Convex.SubmissionFailureSpec

  -- Local dependencies
  build-depends:      convex-base

  -- CHaP dependencies
  build-depends:
    , cardano-api
    , cardano-api-gen
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-conway:testlib
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting

  -- Hackage dependencies
  build-depends:
    , base                 >=4.14.0
    , containers
    , hedgehog-quickcheck
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
